apps/darak/production/networking/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: darak-gateway
spec:
  gatewayClassName: envoy-gateway
  listeners:
    # Darak Homelab (Production)
    - name: darak-prod
      hostname: "*.darak.dev"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - name: darak-prod-cert-tls
            namespace: darak-prod
